objects/SVMXC__Quote__c.object
<CustomObject>
    <fields>
        <fullName>Back_Office_Ref_Number__c</fullName>
        <label>Back Office Ref Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEF_Company__c</fullName>
        <label>DEF Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB_Clarkson</fullName>
                </value>
                <value>
                    <fullName>IT_DEF</fullName>
                </value>
                <value>
                    <fullName>BE_DEF</fullName>
                </value>
                <value>
                    <fullName>BE_VLV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldFeedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Feedback</label>
        <referenceTo>Field_Feedback__c</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NavisionQuoteNumber__c</fullName>
        <label>Navision Quote Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuoteReference__c</fullName>
        <description>Unqiue identification number of the Quote related to this Work Order</description>
        <label>Quote Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>SVMXC__Service_Request__c</referenceTo>
        <relationshipLabel>Service Quotes</relationshipLabel>
        <relationshipName>Service_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_Trigger_Back_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Trigger Back Office</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>